[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pano-splitter"
version = "0.1.0"
description = "A tool for splitting panoramic images into perspective views"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["pano_splitter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 